# PopHead

./: .gitignore  CMakeLists.txt  LICENSE.md  PopHead.layout  PopHead.vcxproj.filters  README.md  Tests.vcxproj.filters  config.ini  d.bat  logsConfig.ini  save  testRandom.cpp
Physics/: collisionBody.cpp  kinematicCollisionHandler.hpp  physicsEngine.hpp  staticCollisionHandler.hpp
Physics/CollisionDebug/: collisionDebugRect.hpp  collisionDebugSettings.hpp
States/: state.cpp  state.hpp  stateIdentifiers.hpp  stateMachine.hpp
States/GameState/: gameState.cpp
World/Animation/: animation.inl
World/Entity/: entity.cpp  entityType.hpp  zone.cpp  zone.hpp
config/: config.ini  logsConfig.ini
doc/: Doxyfile
docs/: ECS_architecture.md  ECS_plan.md  Gui_Tutorial.md  commands.md  configuringLogs.md  guiDesigning.md  inGameTerminal.md  loggingTutorial.md  premakeTutorial.md  recrutation.md  runningUnitTestsTutorial.md  sceneLanguage.md  systemsData.json  systemsDataParser.py  systemsDocs.md  terminalCommands.md
docs/forLevelDesigners/: guiDesigning.md  sceneLanguage.md  terminalCommands.md
docs/forProgrammers/: ECS_architecture.md  configuringLogs.md  formattingPrinciples.md  loggingTutorial.md  projectGeneratingTutorial.md  style.css  systemsData.json  systemsDataParser.py  systemsDocs.html  systemsDocs.md  zValuesPattern.md
docs/uml/: uml.cd
logs/: logFilesCleaner.bat  settings.ini
meta/: compileAndRunComponentsParser.bat  componentsParser.cpp  debugCompileComponentsParser.bat
premake/: premake4.lua  premake5.lua
resources/: scene.xml
resources/animations/: character.animstates.xml  npc.animstates.xml  player.animstates.xml
resources/maps/: desertMap.tmx  hugeDesertMap.tmx  mediumDesertMap.tmx  testMap.tmx  verySmallMap.tmx
resources/music/: musicData.xml
resources/scenes/: canyon.xml  citySouth.xml  credits.xml  desert.xml  desertScene.xml  gateAreaMap.xml  mainMenu.xml  sewage.xml  sewers.xml  smallScene.xml  southFromTheCity.xml  startGameCutScene.xml  subtitlesBeforeStartGameCutscene.xml
resources/shaders/: basic.fs.glsl  basic.vs.glsl  coloredTextureSprite.fs.glsl  coloredTextureSprite.vs.glsl  default.vs.glsl  defaultFramebuffer.fs.glsl  defaultFramebuffer.vs.glsl  fontBitmapDebug.fs.glsl  fontBitmapDebug.vs.glsl  gaussianBlur.fs.glsl  gunShot.fs.glsl  gunShot.vs.glsl  instancedSprite.fs.glsl  instancedSprite.vs.glsl  light.fs.glsl  light.vs.glsl  line.fs.glsl  line.vs.glsl  melee.vs.glsl  points.fs.glsl  points.vs.glsl  singleColorSprite.fs.glsl  singleColorSprite.vs.glsl  sprite.fs.glsl  sprite.vs.glsl  staticPixelPerfect.vs.glsl  text.fs.glsl  text.vs.glsl  textureSprite.vs.glsl  weird.fs.glsl  weird.vs.glsl  weird2.fs.glsl
resources/sounds/: soundData.xml
scenes/: arcadeModeChooseMenu.xml  arcadeSewage.xml  arcadeTheBunker.xml  canyon.xml  citySouth.xml  credits.xml  ecsTest.xml  empty.xml  entranceTest.xml  gateAreaMap.xml  mainMenu.xml  openWorld.xml  options.xml  physicsTest.xml  rendererTest.xml  sewage.xml  startGameCutScene.xml  subtitlesBeforeStartGameCutscene.xml
scenes/audio/: arcadeSewage.audio.xml  (+6 more)
src/: Logs.hpp  aliases.hpp  dearImGui.cpp  game.cpp  game.hpp  gameData.cpp  gameData.hpp  main.cpp  pch.hpp
tests/: main.cpp
(+1025 files in other folders)
